Adds basic layout for displaying Notes; Adds basic Note component; Adds basic Naviation component;

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -34,6 +34,7 @@
   --color-text: var(--c-text-light-1);
 
   --base-gap: 1em;
+  --base-radius: 0.25em;
 }
 
 // @media (prefers-color-scheme: dark) {
