Adds a Notification component with its corresponding store module for displaying confirmation dialogs; moves store actions values as an enumerable to standardize calling those across the codebase

--- a/src/assets/_mixins.scss
+++ b/src/assets/_mixins.scss
@@ -28,6 +28,7 @@
   }
 }
 
+// Only works for single property..
 @mixin transition($property) {
-  transition: $property ease-in-out 0.25s;
+  transition: $property ease 0.25s;
 }
